--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-jshint": "~1.7.0",
     "gulp": "~3.8.6",
     "gulp-istanbul": "~0.2.0",
-    "chai": "~1.9.1"
+    "chai": "~1.9.1",
+    "mocha": "~1.20.1"
   }
 }
